# fish-bone-project

./: .gitignore  README.md  docker-compose.yaml  package.json
services/: Dockerfile  README.md  database.py  logger.yaml  main.py  mock.py  pyproject.toml
services/dao/: diagram.py
services/dto/: diagram.py
services/models/: diagram.py
services/routes/: auth.py  diagram.py
ui/: .dockerignore  Dockerfile  package.json
ui/public/: index.html  manifest.json
ui/src/: index.tsx  types.ts
ui/src/components/: ConfirmDeleteDialog.tsx  CustomTreeItem.tsx  IshikawaDiagram.tsx  Notification.tsx  SideBar.tsx  TreeStructure.tsx
ui/src/layouts/: MainLayout.tsx
ui/src/pages/: AuthPage.tsx  DiagramDetail.tsx  Home.tsx
ui/src/store/: useAuthStore.ts  useDiagramStore.ts
