[project]
name = "fish-bone-services"
version = "0.1.0"
description = ""
authors = [
    {name = "subramanyam mogili",email = "czar1411@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn[standard]>=0.23.0,<0.24.0",
    "sqlalchemy[asyncio]>=2.0.40,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic (>=2.11.7,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
